--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-import-export==4.3.7
 django-ipware==7.0.1
 et_xmlfile==2.0.0
 fonttools==4.57.0
+gunicorn==23.0.0
 html5lib==1.1
 idna==3.10
 lxml==5.4.0
@@ -29,6 +30,8 @@ oscrypto==1.3.0
 packaging==25.0
 pandas==2.2.3
 pillow==11.2.1
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pycparser==2.22
 pydyf==0.11.0
 pyHanko==0.26.0
