--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 arabic-reshaper==3.0.0
 asgiref==3.8.1
 asn1crypto==1.5.1
+boto3==1.38.41
+botocore==1.38.41
 Brotli==1.1.0
 certifi==2025.4.26
 cffi==1.17.1
@@ -18,11 +20,13 @@ django-admin-honeypot==1.1.0
 django-admin-thumbnails==0.2.9
 django-import-export==4.3.7
 django-ipware==7.0.1
+django-storages==1.14.6
 et_xmlfile==2.0.0
 fonttools==4.57.0
 gunicorn==23.0.0
 html5lib==1.1
 idna==3.10
+jmespath==1.0.1
 lxml==5.4.0
 numpy==2.2.5
 openpyxl==3.1.5
@@ -47,6 +51,7 @@ PyYAML==6.0.2
 qrcode==8.2
 reportlab==4.4.0
 requests==2.32.3
+s3transfer==0.13.0
 sib-api-v3-sdk==7.6.0
 six==1.17.0
 sqlparse==0.5.3
